--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <canvas id='myCanvas'></canvas>
+  <canvas id='myCanvas' style="border:1px solid #000000;"></canvas>
 </body>
 <script src="ninja.js"></script>
 </html>
