--- a/ninja.html
+++ b/ninja.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-inverse" style="margin-bottom:0px">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="index.html">Home</a>
       </div>
       <div class="collapse navbar-collapse" id="main-nav">
         <ul class="nav navbar-nav">
@@ -23,14 +23,8 @@
       </div>
     </div>
   </nav>
-  <div style="margin-left: 100px">
-    <h1>Thông tin nhóm</h1>
-    <h2>  Phùng Hải Nguyên - 1312393 </h2>
-    <h2>  Lê Quốc Tấn Lộc - 1312340 </h2>
-  </div>
-
-  <button type="button" class="btn btn-primary" style="margin-left: 400px; margin-top: 20px"><a href="ninja.html" style="color:white">PLAY GAME </a></button>
-
+  <br><br><br>
+  <canvas id='myCanvas' style="border:1px solid #000000; margin-left: 250px"></canvas>
 </body>
-
+<script src="ninja.js"></script>
 </html>
