--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   </div>
 
   <button type="button" class="btn btn-primary" style="margin-left: 400px; margin-top: 20px"><a href="ninja.html" style="color:white">PLAY GAME </a></button>
-
+  <br><br><br><br>
+  <a href="https://www.youtube.com/watch?v=hueLzhHQgN0&t=21s" target="blank" style="margin-left: 100px">Click to see the real game </a>
 </body>
 
 </html>
